--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "node-fetch": "^3.2.6",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "update-notifier": "^6.0.2",
     "winston": "^3.7.2"
   }
